<resources>
    <string name="app_name">News Article Search</string>
    <string name="action_settings">Settings</string>
    <string name="hint">Search...</string>
    <string name="Search">Search</string>
    <string name="title_activity_article">Article Preview</string>
    <string name="title_activity_settings">Settings</string>
    <string name="Save">Save</string>
    <string name="Arts">Arts</string>
    <string name="Fashion"><![CDATA[Fashion & Style]]></string>
    <string name="Sports">Sports</string>
    <string name="NewsDeskValues">News Desk Values</string>
    <string name="SortOrder">Sort Order</string>
    <string name="BeginDate">Begin Date</string>
</resources>
